--- a/pkg/pool-stable/package.json
+++ b/pkg/pool-stable/package.json
@@ -34,8 +34,10 @@
     "@balancer-labs/v2-interfaces": "workspace:*",
     "@balancer-labs/v2-pool-utils": "workspace:*",
     "@balancer-labs/v2-solidity-utils": "workspace:*",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/hardhat": "^6.1.4",
     "@types/chai": "^4.3.3",
     "@types/lodash": "^4.14.186",
     "@types/mocha": "^10.0.0",
@@ -50,6 +52,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.2",
+    "hardhat-gas-reporter": "^1.0.9",
     "hardhat-ignore-warnings": "^0.2.4",
     "lodash.frompairs": "^4.0.1",
     "lodash.pick": "^4.4.0",
@@ -62,7 +65,12 @@
     "prettier-plugin-solidity": "v1.0.0-alpha.59",
     "solhint": "^3.2.0",
     "solhint-plugin-prettier": "^0.0.4",
+    "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "dotenv": "^16.0.3"
   }
 }
